--- a/style/style.scss
+++ b/style/style.scss
@@ -1,3 +1,6 @@
+@import "slick.scss";
+@import "slick-theme.scss";
+
 @font-face {
     font-family: 'wc_mano_negra_btaregular';
     src: url('../font/wcmanonegrabta-webfont.woff2') format('woff2'),
@@ -360,6 +363,7 @@ button, .button{
     justify-content: space-between;
         
     .dishes__item {
+      padding: 0 15px;
       &-title {
         font-size: 16px;
         font-family: 'aleolight';
@@ -367,6 +371,12 @@ button, .button{
         display: flex;
         justify-content: space-between;
       }
+      &--img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
+    }
     }
   }
 }
